src/objects/DynamicMapping__mdt.object
<CustomObject>
    <description>It provides a way to map the fields of one object to another, allowing for the seamless transfer of data between the two objects</description>
    <fields>
        <fullName>InvalidReason__c</fullName>
        <description>Provides validity assessment comments if the mapping was detected invalid.</description>
        <inlineHelpText>Provides validity assessment comments if the mapping was detected invalid.</inlineHelpText>
        <label>Invalid Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceFieldApiName__c</fullName>
        <description>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</description>
        <inlineHelpText>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</inlineHelpText>
        <label>Source Field Api Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObjectApiName__c</fullName>
        <description>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</description>
        <inlineHelpText>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</inlineHelpText>
        <label>Source Object Api Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetFieldApiName__c</fullName>
        <description>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</description>
        <inlineHelpText>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</inlineHelpText>
        <label>Target Field Api Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectApiName__c</fullName>
        <description>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</description>
        <inlineHelpText>SourceObjectApiName.SourceFieldApiName will be mapped to TargetObjectApiName.TargetFieldApiName</inlineHelpText>
        <label>Target Object Api Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNew__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether a record has just been created and it hasn&apos;t yet been validated in Apex. Once the validation will run, this field will be unchecked and the field isValid will get a value.</description>
        <inlineHelpText>System field. This shouldn&apos;t be modified.</inlineHelpText>
        <label>isNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the mapping is correct after running a list of validations in apex. The validations will be run one time when we create a new record. The value will be modified by an apex job. Invalid mapping won&apos;t be considered in the process and will be omitted.</description>
        <inlineHelpText>System field. This should not be modified.</inlineHelpText>
        <label>isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>limitStringLength__c</fullName>
        <description>Helps in limiting the length of a source field value so we don&apos;t exceed the maximum characters that can accept the target field.
Example: Source text field length = 255; Target text field length = 80; We put 80 to take only the first 80 characters.</description>
        <inlineHelpText>Helps in limiting the length of a source field value so we don&apos;t exceed the maximum characters that can accept the target field. You can fill with the target field length if it accepts a lower text length compared to the source text field. The system will still correct this value if needed.</inlineHelpText>
        <label>Limit String Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dynamic Mapping</label>
    <pluralLabel>Dynamic Mappings</pluralLabel>
</CustomObject>